Update build.sbt and remove unneeded dirs